v1.0.1-hotfix before release